Problems have been found with the following capture file:https://www.wireshark.org/download/automated/captures/fuzz-2018-05-25-8928.pcapstderr:Input file: /home/wireshark/menagerie/menagerie/16116-ossfuzz_5e1da59148b7de73714ddbcbaaf4e08b79f7f475_dicom_inifite.pcapBuild host information:Linux wsbb04 4.4.0-127-generic #153-Ubuntu SMP Sat May 19 10:58:46 UTC 2018 x86_64 x86_64 x86_64 GNU/LinuxDistributor ID: UbuntuDescription: Ubuntu 16.04.4 LTSRelease: 16.04Codename: xenialBuildbot information:BUILDBOT_REPOSITORY=ssh://wireshark-buildbot@code.wireshark.org:29418/wiresharkBUILDBOT_WORKERNAME=fuzz-testBUILDBOT_BUILDNUMBER=51BUILDBOT_URL=http://buildbot.wireshark.org/wireshark-2.6/BUILDBOT_BUILDERNAME=Fuzz TestBUILDBOT_GOT_REVISION=01232935a476e1b37a09e676c4338429c12c72b0Return value: 0Dissector bug: 0Valgrind error count: 0Git commitcommit 01232935a476e1b37a09e676c4338429c12c72b0Author: Stig Bjørlykke <stig@bjorlykke.org>Date: Thu May 24 21:02:26 2018 +0200 media_type: Default decode application/octet-stream as data Remove registering media_type application/octet-stream from both thread and uasip because the settings will interfere each other. Enable decoding as for media_type instead. Bug: 14729 Change-Id: I58c527977fe4713418219fc3126ce7a93c4bb641 Reviewed-on: https://code.wireshark.org/review/27789 Reviewed-by: Guy Harris <guy@alum.mit.edu> (cherry picked from commit 0362891ecfaba58b1e82fe9e5c579396f81c28bb) Reviewed-on: https://code.wireshark.org/review/27798 Petri-Dish: Anders Broman <a.broman58@gmail.com> Tested-by: Petri Dish Buildbot Reviewed-by: Anders Broman <a.broman58@gmail.com>** (process:11461): ERROR **: More than 1000000 items in the tree -- possible infinite loop[ no debug trace ]